@@ -1,5 +1,13 @@
 2002-11-26  David Hyatt  <hyatt@apple.com>
 
+	Don't let blocks inside inlines collapse with their surroundings
+	ever.
+	
+        * khtml/rendering/render_flow.cpp:
+        (RenderFlow::layoutBlockChildren):
+
+2002-11-26  David Hyatt  <hyatt@apple.com>
+
 	Fix a collapsing margin regression on aintitcool caused by
 	my support of blocks inside inlines.  A block could be wrapped
 	by an inline, e.g., <font><p>foo</p></font>, and in this case,
